# nf-subway

./: .gitignore  AGENTS.md  COMPLETION_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  task.todo  test_complex_pipeline.py  test_monitor.py  test_subway.py  test_visual.py  test_viz.py
examples/: README.md  demo.nf  demo_with_subworkflows.nf  run_demo_with_subway.sh  setup_demo.sh
examples/demo_data/: sample1.txt  sample2.txt  sample3.txt
nf_subway/: __init__.py  __main__.py  characters.py  cli.py  colors.py  graph.py  grid.py  monitor.py  parser.py  renderer.py
nf_subway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
